refactor: update examples for consolidated import paths
- Update 80+ example files to use new import structure
- Replace scattered compat.bubbletea.bubbles.* with compat.bubbles.*
- Consolidate lipgloss, bubbletea, and x.ansi imports
- Remove redundant imports and unused dependencies
- Ensure examples follow new unified API patterns

All examples now demonstrate the clean, consolidated import structure
making them easier to understand and maintain.